added all generation scripts and reworked a bit DB